package contracts

import org.apache.pekko.actor.typed.ActorSystem
import scala.concurrent.Future
import contracts._ 
import com.google.protobuf.timestamp.Timestamp
import java.time.Instant

class ContractsServiceImpl(system: ActorSystem[_]) extends ContractsService {
  private implicit val ec = system.executionContext

  override def proposeContract(in: ProposeContractRequest): Future[ProposeContractResponse] = {
    val now = Instant.now()
    val contract = Contract(
      id = if (in.id.isEmpty) java.util.UUID.randomUUID().toString else in.id,
      producerId = in.producerId,
      consumerId = in.consumerId,
      schemaUri = in.schemaUri,
      schemaSha256 = in.schemaSha256,
      schemaVersion = in.schemaVersion,
      status = ContractStatus.CONTRACT_STATUS_PROPOSED,
      createdAt = Some(Timestamp(now.getEpochSecond, now.getNano)),
      updatedAt = Some(Timestamp(now.getEpochSecond, now.getNano)),
      notes = in.notes
    )
    // For Phase 2 implementation - Add the Slick DB call here
    Future.successful(ProposeContractResponse(Some(contract)))
  }

  override def agreeContract(in: AgreeContractRequest): Future[AgreeContractResponse] = 
    Future.failed(new RuntimeException("Not implemented - Waiting for Phase 2"))

  override def getContract(in: GetContractRequest): Future[GetContractResponse] = ???
  override def listContracts(in: ListContractsRequest): Future[ListContractsResponse] = ???
}


